--- a/foolish_admin/templates/about.html
+++ b/foolish_admin/templates/about.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <title>About the admin</title>
+    <link rel="icon" type="image/x-icon" href=" {{ url_for('static',path='tuux_space.jpeg') }}" />
   </head>
 
   <body>
-    I am the admin who created this webpage
-    <img src="{{ url_for('static',path='admin-image.jpg') }}" height="500" width="500"/>
+    <p>I am the admin who created this webpage</p>
+    <p>Name : Josiah Le </p>
+    <p>Date of Birth: 24-01-1987</p>
   </body>
 </html>
