--- a/foolish_admin/templates/index.html
+++ b/foolish_admin/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Robert Tech</title>
+    <link rel="icon" type="image/x-icon" href=" {{ url_for('static',path='tuux_space.jpeg') }}" />
 </head>
 
 <body>
